# when2leave

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
tests/: conftest.py  test_caldav_sync.py  test_config.py  test_davpush.py  test_db.py  test_geocoding.py  test_location.py  test_notifier.py  test_routing.py
when2leave/: __init__.py  caldav_sync.py  config.py  davpush.py  db.py  geocoding.py  location.py  logging_config.py  main.py  notifier.py  routing.py  tracker.py  web.py
when2leave/templates/: _history.html  _sections.html  dashboard.html
