[project]
name = "when2leave"
version = "0.1.0"
description = "Self-hosted service that watches your Nextcloud calendar and tells you when to leave, based on real-time location and live travel time."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "when2leave contributors" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "apscheduler>=3.10.4",
    "caldav>=1.3.9",
    "icalendar>=6.1.0",
    "recurring-ical-events>=3.4.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "sqlalchemy>=2.0.35",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.2",
    "jinja2>=3.1.4",
    "structlog>=24.4.0",
    "python-multipart>=0.0.12",
    "tzdata>=2024.2",
    "cryptography>=43.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.1",
    "types-requests",
]

[project.scripts]
when2leave = "when2leave.main:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["when2leave*"]

[tool.setuptools.package-data]
when2leave = ["templates/*.html", "static/*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF", "C4"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["when2leave"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = []
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["caldav", "caldav.*", "icalendar.*", "recurring_ical_events.*", "apscheduler.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
